--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
@@ -62,7 +62,7 @@
   <br>
   <div class="row">
     <div class="col-md-12">
-      <p> <h4>The interactive charts help us visualize the different bacteria collected from the volunteers. Start the analysis by using the drop-down menu to select a volunteer's id.  By selecting this id, the bar chart will be updated and will show data from the top 10 bacteria cultures.  The gauge chart shows the washing frequency giving the number of scrubs per week.  The size of bubbles in the bubble chart shows the sample’s concentration and biodiversity of the bacteria.
+      <p> <h4>The interactive charts help us visualize the different bacteria collected from the volunteers. Start the analysis by using the drop-down menu to select a volunteer's id.  By selecting this id, the bar chart will be updated and will show data from the top 10 bacteria cultures.  The gauge chart shows the washing frequency giving the number of scrubs per week.  The size of bubbles in the bubble chart shows the sample\s concentration and biodiversity of the bacteria.
       </h4> </p>
   </div>
   </div>
