--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <br>
   <div class="row">
     <div class="col-md-12">
-      <p> <h4>The interactive charts help us visualize the different bacteria collected from the volunteers. Start the analysis by using the drop-down menu to select a volunteer's id.  By selecting this id, the bar chart will be updated and will show data from the top 10 bacteria cultures.  The gauge chart shows the washing frequency giving the number of scrubs per week.  The size of bubbles in the bubble chart shows the sample\s concentration and biodiversity of the bacteria.
+      <p> <h4>The interactive charts help us visualize the different bacteria collected from the volunteers. Start the analysis by using the drop-down menu to select a volunteer's id. The bar chart will update and show data from the top 10 bacteria cultures by choosing this id. The gauge chart shows the washing frequency giving the number of scrubs per week. Finally, the size of bubbles in the bubble chart shows the sample's concentration and biodiversity of the bacteria.
       </h4> </p>
   </div>
   </div>
